Updated the demo to latest JDK 17 related changes.