@@ -5,9 +5,8 @@ Demonstration of jScdLib.
 mvn clean install
 
 # Run
-This demo requires Java 16.  
+This demo requires Java 17.  
 
 ```
-java --add-modules jdk.incubator.foreign -Dforeign.restricted=permit -jar target/jscdlib.demo-1.0.0-SNAPSHOT-shaded.jar
+java --add-modules jdk.incubator.foreign --enable-native-access=ALL-UNNAMED -jar target/jscdlib.demo-1.1.0-SNAPSHOT-shaded.jar
 ```
-
